# tileadder

./: .gitignore  pyproject.toml
tileadder/: settings.py
tileadder/background/: __init__.py  core.py  mapcat.py  task.py
tileadder/scripts/: cli.py
tileadder/server/: add.py  app.py  current.py  database.py  templating.py
tileadder/server/templates/: add.html  base.html  current.html  current_mapcat.html  index.html
tileadder/server/templates/htmx/: add_to_existing.html  bands_from_map.html  create_new_map.html  directory_listing.html  edit_map.html  edit_map_group.html  evaluate.html  maps_from_map_group.html
tileadder/service/: creation.py  existing.py  filesystem.py  mapcat.py
